code smells corrigidos